RESOLVED FIXED245229
Attribute reflection for aria-errormessage should use FrozenArray
https://bugs.webkit.org/show_bug.cgi?id=245229
Summary Attribute reflection for aria-errormessage should use FrozenArray
Manuel Rego Casasnovas
Reported 2022-09-15 09:51:04 PDT
aria-errormessage attribute allows to refer to a list of elements in WebKit. Other browsers only allow to reference one element, but there's an ARIA issue about changing that: https://github.com/w3c/aria/issues/1730 Current implementation of IDREF attribute reflection in WebKit only allows to reference to one element, which is inconsistent with the attribute.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-15 09:51:18 PDT
Manuel Rego Casasnovas
Comment 2 2022-09-15 09:56:28 PDT
EWS
Comment 3 2022-09-15 14:41:12 PDT
Committed 254530@main (a4c2d5930246): <https://commits.webkit.org/254530@main> Reviewed commits have been landed. Closing PR #4389 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.