Attribute reflection for aria-errormessage should use FrozenArray https://bugs.webkit.org/show_bug.cgi?id=245229

Reviewed by Ryosuke Niwa.

This patch changes reflection for aria-errormessage so it allows a list of elements
and not just a single one.
This aligns it with aria-errormessage attribute that already allows to reference a list.

There's a ARIA issue about this topic:
https://github.com/w3c/aria/issues/1730

* LayoutTests/accessibility/ARIA-reflection-expected.txt: Update test results.
* LayoutTests/accessibility/ARIA-reflection.html: Update test.
* LayoutTests/fast/custom-elements/reactions-for-aria-element-attributes-expected.txt:
  Update test results.
* LayoutTests/fast/custom-elements/reactions-for-aria-element-attributes.html:
  Update test.
* LayoutTests/imported/w3c/web-platform-tests/html/dom/aria-element-reflection-expected.txt:
  We now fail this test case until the ARIA issue is resolved and the WPT test gets updated.
* Source/WebCore/accessibility/AriaAttributes.idl: Change Element to FrozenArray<Element>.
* Source/WebCore/bindings/js/JSElementCustom.cpp:
(WebCore::JSElement::ariaErrorMessageElements const): Add method.
* Source/WebCore/dom/Element.cpp:
(WebCore::isElementReflectionAttribute): Remove aria-errormessage attribute.
(WebCore::isElementsArrayReflectionAttribute): Add aria-errormessage attribute.

Canonical link: https://commits.webkit.org/254530@main